fix: restore FFS header top margin on mobile

--- a/src/website/static/css/screen-specific/xs.css
+++ b/src/website/static/css/screen-specific/xs.css
@@ -9,10 +9,6 @@
             align-items: center;
         }
 
-        .header > .main-link {
-            padding-top: 0;
-        }
-
         .header > header-tab {
             display: none;
         }
